Fixed positioning in portfolio
.statement was pushing all other divs too far. Got rid and ajdusted div.

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,9 @@
 }
 
 .port-statement{
-	padding:70px 0px 20px 0px;
+	padding:90px 0px 10px 0px;
+	width:100%;
+	margin:auto;
 }
 
 .carousel-inner{
